--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,17 +12,21 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - name: Windows
+        - name: Windows (64-bit)
           os: windows-latest
           
-        - name: macOS
+        - name: macOS (ARM and 64-bit)
           os: macos-latest
 
-        - name: Android32
+        - name: iOS (aka catgirls)
+          os: macos-latest
+          target: iOS
+
+        - name: Android 32-bit
           os: ubuntu-latest
           target: Android32
 
-        - name: Android64
+        - name: Android 64-bit
           os: ubuntu-latest
           target: Android64
 
@@ -33,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the mod
-        uses: geode-sdk/build-geode-mod@main
+        uses: geode-ios/build-geode-mod@main
         with:
           combine: true
           target: ${{ matrix.config.target }}
@@ -44,10 +48,10 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: geode-sdk/build-geode-mod/combine@main
+      - uses: geode-ios/build-geode-mod/combine@main
         id: build
 
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: Build Output
           path: ${{ steps.build.outputs.build-output }}
