--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build the mod
-        uses: geode-ios/build-geode-mod@coop/update-upstream
+        uses: geode-catgirls/build-geode-mod@main
         with:
           combine: true
           target: ${{ matrix.config.target }}
@@ -48,7 +48,7 @@ jobs:
     needs: ['build']
 
     steps:
-      - uses: geode-ios/build-geode-mod/combine@coop/update-upstream
+      - uses: geode-catgirls/build-geode-mod/combine@main
         id: build
 
       - uses: actions/upload-artifact@v4
