--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,14 @@
 cmake_minimum_required(VERSION 3.21)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
-
-project(DevTools VERSION 1.0.0)
 
 if(${GEODE_TARGET_PLATFORM} STREQUAL "iOS" OR IOS)
-  message(STATUS "building for ios :3")
-  unset(CMAKE_OSX_ARCHITECTURES)
-  set(CMAKE_OSX_ARCHITECTURES arm64)
-  set(CMAKE_OSX_DEPLOYMENT_TARGET "14.0")
-  set(CMAKE_SYSTEM_NAME "iOS")
+    set(CMAKE_OSX_ARCHITECTURES arm64)
+else()
+    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
 endif()
+
+project(DevTools VERSION 1.0.0)
 
 file(GLOB_RECURSE SOURCES
     src/*.cpp
