--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build the mod
         uses: geode-catgirls/build-geode-mod@main
         with:
-          bindings: geode-catgirls/bindings
+          bindings: kingminer7/bindings-2
           gh-pat: ${{ secrets.GH_PAT }}
           combine: true
           target: ${{ matrix.config.target }}
